2011-09-15  Mark Hahnenberg  <mhahnenberg@apple.com>

        Unzip initialization lists and constructors in JSCell hierarchy (7/7)
        https://bugs.webkit.org/show_bug.cgi?id=68122

        Reviewed by Geoffrey Garen.

        No new tests.

        Completed the seventh and final level of the refactoring to add finishCreation() 
        methods to all classes within the JSCell hierarchy with non-trivial 
        constructor bodies.

        This consists of moving the finishCreation() method call into the create methods
        of the sixth level of the hierarchy as was done in previous patches.  

        The special cases for JSAudioConstructor, JSOptionConstructor, and JSImageConstructor 
        were also lumped in and given finishCreation() methods that are called in their 
        create methods because we are at the end and want to avoid a trivial patch just 
        for moving their finishCreation() methods from their constructor to their create method.

        * bindings/js/JSAudioConstructor.cpp:
        (WebCore::JSAudioConstructor::JSAudioConstructor):
        (WebCore::JSAudioConstructor::finishCreation):
        * bindings/js/JSAudioConstructor.h:
        (WebCore::JSAudioConstructor::create):
        * bindings/js/JSDOMBinding.h:
        (WebCore::DOMConstructorWithDocument::DOMConstructorWithDocument):
        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::JSDOMWindowBase::JSDOMWindowBase):
        * bindings/js/JSImageConstructor.cpp:
        (WebCore::JSImageConstructor::JSImageConstructor):
        (WebCore::JSImageConstructor::finishCreation):
        * bindings/js/JSImageConstructor.h:
        (WebCore::JSImageConstructor::create):
        * bindings/js/JSOptionConstructor.cpp:
        (WebCore::JSOptionConstructor::JSOptionConstructor):
        (WebCore::JSOptionConstructor::finishCreation):
        * bindings/js/JSOptionConstructor.h:
        (WebCore::JSOptionConstructor::create):
        * bindings/js/JSWorkerContextBase.cpp: