@@ -1,3 +1,15 @@
+2011-09-15  Adrienne Walker  <enne@google.com>
+
+        [chromium] Add temporary diagnostics for LayerTreeHost::commitTo crash
+        https://bugs.webkit.org/show_bug.cgi?id=68204
+
+        Reviewed by James Robinson.
+
+        Add CRASH calls to determine which assumptions are being violated.
+
+        * src/WebViewImpl.cpp:
+        (WebKit::WebViewImpl::composite):
+
 2011-09-15  David Levin  <levin@chromium.org>
 
         Remove TestWebKitAPI from the chromium build until it is made to work
