@@ -1,3 +1,15 @@
+2011-09-15  Adrienne Walker  <enne@google.com>
+
+        [chromium] Add temporary diagnostics for LayerTreeHost::commitTo crash
+        https://bugs.webkit.org/show_bug.cgi?id=68204
+
+        Reviewed by James Robinson.
+
+        Add CRASH calls to determine which assumptions are being violated.
+
+        * platform/graphics/chromium/cc/CCLayerTreeHost.cpp:
+        (WebCore::CCLayerTreeHost::commitTo):
+
 2011-09-15  Mark Hahnenberg  <mhahnenberg@apple.com>
 
         Unzip initialization lists and constructors in JSCell hierarchy (7/7)
